--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="TextUtils is a utility which can be used to manipulate your text in the way you want" />
+    content="TextUtils is a word counter and a charachterutility which can be used to manipulate your text in the way you want. You can remove extra spaces, copy the manipulated text as well as convert text from uppercase to lowercase" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoTextUtils.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>TextUtils - Home</title>
+  <title>TextUtils - Word counter | charachter counter | lowercase to uppercase | uppercase to lowercase</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
